Bug 1762873 - Don't incorrectly add scrollbar size to select intrinsic size. r=jfkthame, a=dsmith

In bug 1744009[1] I changed some code that looked like:

  * Get the dropdown frame intrinsic size.
  * If there's overlay scrollbars, add the non-overlay scrollbar size.

That code came from bug 869314. I misread the "if there's overlay
scrollbars" bit.

There's no need to explicitly add the scrollbar width to the intrinsic
size anymore. The dropdown frame no longer exists, and the button size
is split out from the scrollbar size nowadays. There's no reason
to artificially add any size to the content frame.

[1]: https://hg.mozilla.org/integration/autoland/rev/78130d73ca75#l24.652

Differential Revision: https://phabricator.services.mozilla.com/D142834